# writing-assistant-pro

./: .babelrc  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  FLET_MIGRATION.md  LICENSE  QUICKSTART.md  README.md  Todo.md  Writing Assistant Pro.spec  babel.cfg  config.json  correction.md  interface_launcher.py  main.py  pyproject.toml  pyright_output.txt  search_results.html  styles.py  todo.md
.agent/rules/: llm-rules.md
.clinerules/: llm-rules.md
.github/workflows/: release.yml
.kilocode/rules/: rules.md
docs/: 01_GETTING_STARTED.md  02_DEVELOPMENT.md  03_BUILD_SYSTEM.md  04_LOGGING.md  05_TRANSLATION.md  06_SYSTRAY.md  07_AUTOSTART.md  08_CONFIGURATION.md  09_ASSETS.md  10_PRECOMMIT.md  11_TESTING.md  12_KEYBOARD_SHORTCUTS.md  13_RELEASE_PROCESS.md  14_COMMIT_PROMPT.md  99_ROADMAP.md  BASE_SOLIDE_PLAN.md  CLEANUP_TASKS.md  CODING_GUIDELINES.md  COMMITIZEN.md  CONFIG_BABEL.md  DEVELOPMENT.md  ERROR_HANDLING.md  EVENT_BUS_COMPARISON.md  FRAMEWORK_CHOICE.md  ICONS.md  KEYBOARD_SHORTC  KEYBOARD_SHORTCUTS.md  LLM_RULES.md  LOGGING.md  MEMORY_OPTIMIZATION.md  MODES_AND_COMPARISON.md  PRECOMMIT.md  PYTHON_NOTES.md  README.md  RECAP.md  REFACTORING_PLAN.md  RUFF_SETUP.md  STRUCTURE.md  THEMES_INVENTORY.md  TRANSLATION_README.md  (+5 more)
docs/archive/: MEMORY_OPTIMIZATION.md  REFACTORING_SUMMARY.md
scripts/: build_dev.py  build_final.py  convert_icon.py  create_release.py  run_dev.py  run_pyright.py  run_ruff.py  utils.py  verify_autostart.py
scripts/dev_build/: __init__.py  build_dev.py  build_final.py  build_utils.py  run_dev.py  verify_autostart.py
scripts/quality/: __init__.py
scripts/tests/: __init__.py  test_crash.py
scripts/translation_management/: GUIDE.md  README.md  update_translations.py
src/: __init__.py  version.py
src/core/: __init__.py  app.py  autostart_manager.py  config.json  config.py  enums.py  error_handler.py  event_bus.py  hotkey_manager.py  lifecycle_manager.py  logger.py  resource_manager.py  state.py  styles.py  systray_manager.py  translation.py  utils.py  window_manager.py
src/core/config/: __init__.py  config.json  manager.py
src/core/managers/: __init__.py  autostart.py  hotkey.py  systray.py  window.py
src/core/services/: __init__.py  hotkey_capture.py  input_source.py  logger.py  translation.py  updater.py  writing-assistant-pro.code-workspace
src/core/utils/: __init__.py  paths.py
src/ui/: __init__.py  app.py  app_flet.py  design_system.py  header.py  interface.py
src/ui/components/: __init__.py  common.py  navigation_rail.py  sidebar.py  top_action_bar.py
src/ui/components/input/: attachment_zone.py  prompt_bar.py  source_indicator.py
src/ui/dialogs/: __init__.py  hotkey_dialog.py  update_dialog.py
src/ui/services/: file_handler.py
src/ui/views/: __init__.py  about_view.py  main_view.py  settings_view.py
src/ui_nicegui.bak/: header.py  interface.py
styles/: dark.css  light.css
tests/: conftest.py  test_config.py  test_error_handler.py  test_event_bus.py  test_resource_manager.py  test_state.py  test_translation.py
translations/: template.pot
translations/de/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/en/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/es/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/fr/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/it/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/ja/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/pt/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/ru/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
translations/zh/LC_MESSAGES/: writing_assistant.mo  writing_assistant.po
ui/: __init__.py
