[project]
name = "writing-assistant-pro"
version = "0.1.0"
description = "Inspired by writting tool app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui",
    "pywebview",
    "babel", # For translation management
    "keyboard", # For global hotkey management
    "watchdog>=6.0.0",
    "ruff",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
exclude = ["build", "dist", "__pycache__", "myvenv", ".uv", ".pytest_cache", ".mypy_cache", ".venv", ".git", ".ruff_cache"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C4"]
ignore = ["E501"]
