[project]
name = "writing-assistant-pro"
version = "0.1.0"
description = "Inspired by writting tool app"
authors = [
    { name = "3C0D", email = "author@example.com" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "nicegui",  # Web-based UI framework for Python
    "pywebview",  # Lightweight cross-platform webview library
    "babel", # For translation management
    "keyboard", # For global hotkey management
    "watchdog>=6.0.0",  # File system monitoring, used to detect css changes
    "ruff",  # Fast Python linter and formatter
    "loguru",  # Modern logging library with colored output
    "pre-commit"  # For managing pre-commit hooks
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"  # Target Python
cache-dir = ".ruff_cache"  # For caching Ruff's analysis results
exclude = ["build", "dist", "__pycache__", "myvenv", ".uv", ".pytest_cache", ".mypy_cache", ".venv", ".git", ".ruff_cache"]  # Exclude from linting

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "C4", "B"]  # Enabled rule categories: pycodestyle errors, warnings, pyflakes, isort, pyupgrade, flake8-comprehensions, flake8-bugbear
ignore = []  # List of rules to ignore

[tool.ruff.lint.isort]
known-first-party = ["src"]  # Treat 'src' as first-party imports for import sorting
